Fixed checkbox/radio closed gap styling issue.

--- a/modules/woofilters/css/frontend.woofilters.css
+++ b/modules/woofilters/css/frontend.woofilters.css
@@ -102,6 +102,7 @@
 .wpfCheckbox {
 	vertical-align: middle;
 	display: inline-block;
+	line-height: 18px;
 }
 .wpfCheckbox input{
 	cursor: pointer;
@@ -301,6 +302,8 @@
 .wpfFilterWrapper ul:not(.wpfButtonsFilter) li {
 	padding-left: 0px !important;
 	margin-left: 0px !important;
+	padding-top: 2px;
+	padding-bottom: 2px;
 }
 .rtl .wpfFilterWrapper ul:not(.wpfButtonsFilter) li {
 	padding-right: 0px !important;
